# meld

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.beads/: issues.jsonl
.claude/epics/meld-v1/: bead-review.md  epic.md
.claude/prds/: meld-v1.md
src/meld/: __init__.py  __main__.py  advisors.py  cli.py  convergence.py  data_models.py  melder.py  orchestrator.py  output.py  preflight.py  prompts.py  session.py  tui.py
src/meld/providers/: __init__.py  base.py  claude.py  gemini.py  openai.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_failure_scenarios.py  test_happy_path.py  test_resume.py
tests/integration/: __init__.py  test_advisor_pool.py  test_full_loop.py  test_session_manager.py
tests/mocks/: __init__.py  mock_adapter.py
tests/unit/: __init__.py  test_adapters.py  test_advisors.py  test_cli.py  test_convergence.py  test_melder.py  test_orchestrator.py  test_output.py  test_preflight.py  test_session.py  test_tui.py
